# BOCPD

./: CmakeLists.txt  README.md  bocpd.h  bocpd_fast.c  bocpd_fast.h  bocpd_kernel_avx2.s  bocpd_kernel_avx512.s  test_bocpd.c
asm/: bocpd_asm.h  bocpd_avx2_kernel_intel.asm  bocpd_config.h  bocpd_fast_wrapper.h  bocpd_kernel_avx2.asm  bocpd_kernel_avx2_14900.asm  bocpd_kernel_avx2_generic.asm  bocpd_kernel_avx2_intel_fused.asm  bocpd_ultra_opt_asm.c  fix_asm_alignment.bat
asm/linux/: bocpd_avx2_kernel_intel.asm  bocpd_kernel_avx2_generic.asm
scalar/: bocpd.c  bocpd.h
test/: CMakeLists.txt  bocpd_bench.c  test_bocpd_fast.c  test_naiveBench.c
